<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="10"
        tools:context="com.saxena.kshitij.miband2connect.GattClientMainActivity">

        <LinearLayout
            android:id="@+id/hRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/heart_rate"
                android:textColor="@color/songColor" />

            <TextView
                android:id="@+id/heartRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0 bpm"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <Button
            android:id="@+id/getBandDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get Device Details" />

        <ListView
            android:id="@+id/deviceListView"
            android:layout_width="match_parent"
            android:layout_height="196dp"
            android:listSelector="@color/colorAccent" />

        <TextView
            android:id="@+id/baseUrlTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/baseUrlTextView"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/baseUrlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/baseURLExample"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/firstSong"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:height="100dp"
            android:text="@string/sensor_button" />

        <Button
            android:id="@+id/nextSong"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:height="100dp"
            android:text="@string/nextSongButton" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <ImageView
                android:layout_width="269dp"
                android:layout_height="214dp"
                android:layout_marginTop="80dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="Song Name"
                android:textAlignment="center"
                android:textColor="@color/songColor"
                android:textSize="22sp" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_marginTop="50dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="50dp" />


                <Button
                    android:id="@+id/pause"
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@+id/pause" />

                <Button
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_toLeftOf="@+id/pause" />

            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>